# multictactoe

./: .gitignore  LICENSE  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  server_logs.txt  test_login.py  test_pfp_b64.txt
backend/: auth.py  database.py  elo.py  game.py  lobby.py  main.py  session.py
frontend/: fui_audio.js  game.html  hud_core.css  leaderboard.html  lobby.html  login.html
scraper/: scraper.py  view_pfp.py
