[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "python-multipart>=0.0.24",
    "setuptools<71.0",
    "uvicorn>=0.44.0",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
